src/objects/NokiaCPQ_CSP_Map_Control__c.object
<CustomObject>
    <description>CSP Requirement</description>
    <fields>
        <fullName>Map_Mode__c</fullName>
        <label>Map Mode</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Source__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Main</fullName>
                </value>
                <value>
                    <fullName>Split</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <label>Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Airscale Wifi</fullName>
                </value>
                <value>
                    <fullName>Nokia Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>Product code of the main bundle</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>SOURCE -&gt; the source of the PCI/SI mapping rules
EXTERNAL -&gt; thePCI is stored as an attribute on the line item level
TABLE -&gt; it is stored in the existing custom object</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Table</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Splitlevel__c</fullName>
        <description>the level that turns into the SCC for SPLIT mode 1</description>
        <label>Splitlevel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>NokiaCPQ CSP Map Control</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Portfolio__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Source__c</columns>
        <columns>Map_Mode__c</columns>
        <columns>Splitlevel__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>NokiaCPQ CSP Map Control Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NokiaCPQ_CSP_Map_Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>